--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A3000000"
+    android:background="#000000"
     tools:context=".MainActivity">
 
     <ImageView
@@ -52,9 +52,10 @@
         android:id="@+id/recyclerview_tmdb"
         android:layout_width="match_parent"
         android:layout_height="554dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
 
         />
 
