--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079"
+        app:layout_constraintVertical_bias="0.085"
         app:srcCompat="@drawable/logo2" />
 
     <TextView
@@ -52,10 +52,11 @@
         android:id="@+id/recyclerview_tmdb"
         android:layout_width="match_parent"
         android:layout_height="554dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView4"
+        tools:listitem="@layout/item_api_movie"
 
         />
 
