Transferring the observing from the main activity to popular movies fragment and clearing the main activity (All team members worked on this through zoom meeting)

--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -7,7 +7,7 @@
     tools:context=".Fragments.PopularMovies">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myRecycleView_API_Movie"
+        android:id="@+id/recyclerview_tmdb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
