Adding main_menu with items (Favourite, popular, Top rated) and bottom bar, linking them together and modifying MainActivity (All team members worked on this through zoom meeting)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,5 +62,15 @@
         app:navGraph= "@navigation/main_nav_graph"
 
         />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:menu="@menu/main_menu"
+        android:id="@+id/main_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
