--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -24,51 +24,85 @@
             tools:srcCompat="@tools:sample/avatars" />
 
 
-
-
-
         <TextView
             android:id="@+id/myOverView"
-            android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            tools:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
-            android:textColor="#E41515"
+            android:layout_marginTop="12dp"
+            android:padding="10dp"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/myPosterImage"
-            />
-
-
+            tools:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh" />
 
         <TextView
             android:id="@+id/myReleaseDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            tools:text="28/5/2000"
-            android:textColor="#E41515"
+            android:padding="10dp"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@id/myOriginal_language"
             app:layout_constraintStart_toStartOf="@id/myOriginal_language"
             app:layout_constraintTop_toBottomOf="@id/myOriginal_language"
-            android:padding="10dp"/>
+            tools:text="28/5/2000" />
 
         <TextView
             android:id="@+id/myOriginal_language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="eg"
             android:layout_marginTop="5dp"
-            android:textColor="#E41515"
+            android:padding="10dp"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/myOverView"
             app:layout_constraintStart_toStartOf="@+id/myOverView"
             app:layout_constraintTop_toBottomOf="@id/myOverView"
-            android:padding="10dp"/>
+            tools:text="eg" />
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="108dp"
+            android:layout_height="35dp"
+            android:text="Overview"
+            android:textColor="#FF0000"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@id/myOverView"
+           app:layout_constraintTop_toBottomOf="@id/myPosterImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="48dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="56dp"
+            android:text="language"
+            android:textColor="#FF0000"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Release date"
+            android:textColor="#FF0000"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
