--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,27 +50,29 @@
 
     <fragment
         android:id="@+id/main_container_activityMain"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/imageView4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="20dp"
         android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="413dp"
+        android:layout_height="599dp"
+        android:layout_marginTop="20dp"
         app:defaultNavHost="true"
-        app:navGraph= "@navigation/main_nav_graph"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
 
-        />
+        app:layout_constraintVertical_bias="0.066"
+        app:navGraph="@navigation/main_nav_graph" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        app:menu="@menu/main_menu"
         android:id="@+id/main_bottom_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="#AAAAAA"
+        app:itemIconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/main_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
