--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/popularMovies" android:title="Popular" android:icon="@drawable/popular"/>
-    <item android:id="@+id/topRated" android:title="Top Rated" android:icon="@drawable/top_rated"/>
-    <item android:id="@+id/favourits" android:title="Favourite" android:icon="@drawable/star"/>
+    <item
+        android:id="@+id/popularMovies"
+        android:icon="@drawable/populer"
+        android:title="Popular"
+
+
+        android:visible="true" />
+    <item
+        android:id="@+id/topRated"
+        android:icon="@drawable/rated"
+
+        android:title="Top Rated"
+        android:visible="true" />
+    <item
+        android:id="@+id/favourits"
+        android:icon="@drawable/favourite"
+
+        android:title="Favourite"
+
+        android:visible="true" />
 
 
 </menu>
