--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#FF0000</item>
-        <item name="colorPrimaryDark">#000000</item>
+        <item name="colorPrimaryDark">#B5B5B5</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
